[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmls"
version = "0.2.0"
description = "Polymarket CLI utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "py-clob-client",
]

[project.scripts]
pmls = "pmls.cli:main"

[tool.setuptools]
packages = ["pmls", "pmls.api", "pmls.commands", "pmls.trading"]
